--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input
           type="text"
           class="todo-input"
-          placeholder="Wpisz treść zadania..."
+          placeholder="Wpisz treść zadania"
         />
         <button class="add-btn">Add</button>
       </div>
